# Conject

./: CMakeLists.txt  CMakePresets.json  README.md
src/: injector.cpp  main.cpp  utils.cpp
src/headers/: config.h  inject.h  utils.h
